--- a/app1/index.html
+++ b/app1/index.html
@@ -21,17 +21,17 @@
   </svg>
 </div>
     </div>
-    <div class="menu">
+      <div class="menu">
         <a href="Javascript:loadpage('./results/index.html')">首頁</a>
         <a href="Javascript:loadpage('./results/health.html')">健康天地</a>
-        <a href="Javascript:loadpage('./results/basketball.html")>籃球介紹</a>
-        <a href="Javascript:loadpage('./results/baseball.html")>棒球介紹</a>
-        <a href="Javascript:loadpage('./results/swimming.html")>游泳介紹</a>
-        <a href="Javascript:loadpage('./results/msgboard.html")>訪客留言</a>
-        <a href="Javascript:loadpage('./results/reference.html")>資料來源</a>
-    </div>
+        <a href="Javascript:loadpage('./results/basketball.html')">籃球介紹</a>
+        <a href="Javascript:loadpage('./results/baseball.html')">棒球介紹</a>
+        <a href="Javascript:loadpage('./results/swimming.html')">游泳介紹</a>
+        <a href="Javascript:loadpage('./results/msgboard.html')">訪客留言</a>
+        <a href="Javascript:loadpage('./results/reference.html')">資料來源</a>
+      </div>
     <div class="content">
-      <!-- 使用js在這兒呈現 -->
+      <!-- 使用js loadpage()在這兒呈現 -->
     </div>
     <div class="footer">
       網頁設計及維護：ＸＸＯＯＯ<br>
