--- a/app2/index.html
+++ b/app2/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <h1 class="header">學生資料管理系統
-    <button class="btn btn btn-primary mx-3" onclick="stuModal.show('#studentForm')">+新增</button>
+    <button class="btn btn btn-primary mx-3" onclick="popForm('add')">+新增</button>
   </h1>
 
   <div class="container d-flex">
@@ -32,70 +32,9 @@
     <!-- 撈取學生資料_queryAll() -->
   </div>
 
-
   <div id="modals">
-    <!-- Modal -->
-  <div class="modal fade" id="studentForm" tabindex="-1" aria-labelledby="studentFormLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="studentFormLabel">新增學生</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form action="./api/insert.php" method="post" class="row p-3">
-            <div class="mb-3 col-6">
-              <label for="name" class="form-label">姓名</label>
-              <input type="text" class="form-control" name="name" id="name">
-            </div>
-            <div class="mb-3 col-6">
-              <label for="school_num" class="form-label">學號</label>
-              <input type="text" class="form-control" name="school_num" id="school_num">
-            </div>
-            <div class="mb-3 col-6">
-              <label for="birthday" class="form-label">生日</label>
-              <input type="date" class="form-control" name="birthday" id="birthday">
-            </div>
-            <div class="mb-3 col-6">
-              <label for="uni_id" class="form-label">身分證字號</label>
-              <input type="text" class="form-control" name="uni_id" id="uni_id">
-            </div>
-            <div class="mb-3 col-6">
-              <label for="addr" class="form-label">地址</label>
-              <input type="text" class="form-control" name="addr" id="addr">
-            </div>
-            <div class="mb-3 col-6">
-              <label for="parents" class="form-label">家長</label>
-              <input type="text" class="form-control" name="parents" id="parents">
-            </div>
-            <div class="mb-3 col-6">
-              <label for="tel" class="form-label">電話</label>
-              <input type="text" class="form-control" name="tel" id="tel">
-            </div>
-            <div class="mb-3 col-6">
-              <label for="dept" class="form-label">科系</label>
-              <input type="text" class="form-control" name="dept" id="dept">
-            </div>
-            <div class='mb-3 col-6'>
-              <select id="schools" class="form-select"  aria-label="Default select" name="schools">
-                <!-- 製作畢業學校的選單事件 -->
-              </select>
-            </div>
-            <div class="mb-3 col-6">
-              <label for="status_code" class="form-label">畢業狀態</label>
-              <input type="text" class="form-control" name="status_code" id="status_code">
-            </div>
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-           <button type="submit" class="btn btn-primary">確認新增</button>
-          </form>
-        </div>
-        <div class="modal-footer">
-          
-        </div>
-      </div>
-    </div>
   </div>
-</div>
+
 
 
   <script src="../plugin/js/bootstrap.js"></script>
@@ -103,17 +42,42 @@
 
 </html>
 <script>
-  // modal事件宣告
-  const stuModal = new bootstrap.Modal('#studentForm', {
-  keyboard: false
-})
+  //   // modal事件宣告(new modal)
+  //   const stuModal = new bootstrap.Modal('#studentForm', {
+  //   keyboard: false
+  // })
 
-//製作畢業學校的選單事件
-$("#studentForm").on('show.bs.modal',()=>{ //id等於studentForm時，在這個modal show出時
+  // //製作畢業學校的選單事件
+  // $("#studentForm").on('show.bs.modal',()=>{ //id等於studentForm時，在這個modal show出時
 
-  $.get("./api/get_schools.php",(options)=>{ //去後端執行 ./api/get_schools.php，並將資料取出
-    $("#schools").html(options)  // 在 id等於schools，這個element下印出 options是從get_schools.php來的
-  })
+  //   $.get("./api/get_schools.php",(options)=>{ //去後端執行 ./api/get_schools.php，並將資料取出
+  //     $("#schools").html(options)  // 在 id等於schools，這個element下印出 options是從get_schools.php來的
+  //   })
+
+  let stuModal;
+  function popForm(type, id = null) {
+    $.get('./api/user_form.php', (form) => {  //(form)表示是回傳的內容
+      $("#modals").html(form)  //把表單放到modals裡
+      stuModal = new bootstrap.Modal('#studentForm', {  //宣告 modal的存在
+        keyboard: false
+      })
+
+      //製作畢業學校的選單事件
+      $("#studentForm").on('show.bs.modal', () => { //id等於studentForm時，在這個modal show出時
+
+        $.get("./api/get_schools.php", (options) => { //去後端執行 ./api/get_schools.php，並將資料取出
+          $("#schools").html(options)  // 在 id等於schools，這個element下印出 options是從get_schools.php來的
+        })
+      })
+
+      //觸發顯示
+      stuModal.show("studentForm")  //在呈現 studentForm
+
+    })
+  }
+
+
+
   /************************************
   * 1.考慮觸發行為的事件
   * 2.建立監聽行為
@@ -121,12 +85,6 @@ $("#studentForm").on('show.bs.modal',()=>{ //id等於studentForm時，在這個m
   * 4.是否會有回傳值？回傳值的功用及處理？
   * 5.是否需要更新畫面內容？更新畫面的方法？
   ************************************/
-
-
-}
-)
-
-
 
   queryAll();//撈取所有學生的資料
   queryClasses(); //撈取該班的所有學生
